--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "song_list_of_nanakaie",
-  "version": "0.0.1",
+  "name": "song_list_of_zaozao",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
